# ChangeLog for media-tv/kodi
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kodi-14.0 (08 Jan 2015)

  08 Jan 2015; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +kodi-14.0.ebuild, +files/kodi-9999-no-arm-flags.patch,
  +files/kodi-9999-nomythtv.patch, +files/generate.sh, +metadata.xml:
  Initial import. Based on xbmc-13.2.
